# remap_plugin_base

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/remap_plugin_base/: plugin_base.hpp  regions_register.hpp  semantic_plugin.hpp
src/remap_plugin_base/: plugin_base.cpp  regions_register.cpp  semantic_plugin.cpp
