<?xml version="1.0"?>
<package format="3">
  <name>remap_plugin_base</name>
  <version>0.3.0</version>
  <description>Remap plugin base package</description>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>Apache License 2.0</license>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>kb_msgs</depend> 
  <depend>rclcpp</depend>
  <depend>remap_map_handler</depend>
  <depend>remap_regions_register</depend>
  <depend>std_msgs</depend>
  <depend>vdb2pc</depend>
  <depend>libopenvdb-dev</depend>
  <depend>tbb</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
